--- a/manifest.json
+++ b/manifest.json
@@ -12,13 +12,13 @@
   "categories": ["fitness", "health", "sports"],
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "https://yashk45929.github.io/workout/icon-192x192.png"
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "https://yashk45929.github.io/workout/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
