--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Gym Training Program by Guru Ji",
+  "name": "Tyari",
   "short_name": "Gym Workout",
   "description": "Evidence-Based Exercise Programming with Comprehensive Tracking",
   "start_url": "/",
